# zip-editor

./: .gitignore  Dockerfile  README.md  entrypoint.sh
.github/workflows/: docker.yml
html/: README.md  index.html  package-lock.json  package.json  vite.config.js
html/src/: App.vue  main.js
html/src/assets/: main.less
html/src/router/: index.js
html/src/views/: HomeView.vue  List.vue  PageButton.vue  Reader.vue
rust/: .dockerignore  .gitignore  Cargo.toml
rust/config/: config.yml
rust/src/: app_response.rs  config.rs  main.rs
rust/src/middleware/: mod.rs
rust/src/routers/: mod.rs
server/: pom.xml
server/src/main/java/cn/inkroom/zip/: ZipApplication.java
server/src/main/java/cn/inkroom/zip/controller/: ZipController.java
server/src/main/resources/: application.properties
server/src/test/java/cn/inkroom/zip/: ZipApplicationTests.java
