[package]
name = "zip-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clia-tracing-config = "0.2.7"
once_cell = "1.18.0"
rust-embed = "8.2.0"
salvo = { version = "0.65", features = ["anyhow", "logging", "catch-panic", "serve-static", "test"] }
serde = "1.0.188"
serde_json = "1.0.113"
serde_yaml = "0.8.26"
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1.35.1", features = ["rt","net","sync","signal"] }
tracing = "0.1"
walkdir = "2.4.0"
zip = "0.6.6"

[profile.release]
lto = true
opt-level = 'z'
